--- a/include/wcc.h.in
+++ b/include/wcc.h.in
@@ -73,7 +73,7 @@ int WCC_ZZZ_RANDOM_GENERATE(csprng *RNG,octet* S);
  * @param  D        Identity
  * @param  h        Integer result
  */
-void WCC_ZZZ_Hq(int sha, octet *A,octet *B,octet *C,octet *D,octet *h);
+void WCC_ZZZ_Hq(int sha,octet *A,octet *B,octet *C,octet *D,octet *h);
 
 /**
  * @brief Calculate value in G2 multiplied by an integer
@@ -85,13 +85,12 @@ void WCC_ZZZ_Hq(int sha, octet *A,octet *B,octet *C,octet *D,octet *h);
  * </ol>
  *
  * @param  sha       Hash type
- * @param  hashDone  ID is value is already hashed if set to 1
  * @param  S         integer modulus curve order
  * @param  ID        ID Value or sha256(ID)
  * @param  VG2       EC Point VG2 = s*H2(ID)
  * @return rtn       Returns 0 if successful or else an error code
  */
-int WCC_ZZZ_GET_G2_MULTIPLE(int sha, int hashDone,octet *S,octet *ID,octet *VG2);
+int WCC_ZZZ_GET_G2_MULTIPLE(int sha,octet *S,octet *ID,octet *VG2);
 
 /**
  * @brief Calculate value in G1 multiplied by an integer
@@ -103,85 +102,12 @@ int WCC_ZZZ_GET_G2_MULTIPLE(int sha, int hashDone,octet *S,octet *ID,octet *VG2)
  * </ol>
  *
  * @param  sha         Hash type
- * @param  hashDone    ID value is already hashed if set to 1
  * @param  S           integer modulus curve order
  * @param  ID          ID value or sha256(ID)
  * @param  VG1         EC point VG1 = s*H1(ID)
  * @return rtn         Returns 0 if successful or else an error code
  */
-int WCC_ZZZ_GET_G1_MULTIPLE(int sha, int hashDone,octet *S,octet *ID,octet *VG1);
-
-/**
- * @brief Calculate a value in G1 used for when time permits are enabled
- *
- * Calculate a value in G1 used for when time permits are enabled.
- *
- * <ol>
- * <li> VG1 = s*H1(ID) + s*H1(date|sha256(ID))
- * </ol>
- *
- * @param  sha         Hash type
- * @param  date        Epoch days
- * @param  S           integer modulus curve order
- * @param  ID          ID value or sha256(ID)
- * @param  VG1         EC point in G1
- * @return rtn         Returns 0 if successful or else an error code
- */
-int WCC_ZZZ_GET_G1_TPMULT(int sha, int date, octet *S,octet *ID,octet *VG1);
-
-/**
- * @brief Calculate a value in G2 used for when time permits are enabled
- *
- * Calculate a value in G2 used for when time permits are enabled.
- *
- * <ol>
- * <li> VG2 = s*H1(ID) + s*H1(date|sha256(ID))
- * </ol>
- *
- * @param  sha         Hash type
- * @param  date        Epoch days
- * @param  S           integer modulus curve order
- * @param  ID          ID value or sha256(ID)
- * @param  VG2         EC point in G2
- * @return rtn         Returns 0 if successful or else an error code
- */
-int WCC_ZZZ_GET_G2_TPMULT(int sha, int date, octet *S,octet *ID,octet *VG2);
-
-/**
- * @brief Calculate time permit in G2
- *
- * Calculate time permit in G2.
- *
- * <ol>
- * <li> TPG1=s*H1(date|sha256(ID))
- * </ol>
- *
- * @param  sha       Hash type
- * @param  date      Epoch days
- * @param  S         Master secret
- * @param  HID       sha256(ID)
- * @param  TPG1      Time Permit in G1
- * @return rtn       Returns 0 if successful or else an error code
- */
-int WCC_ZZZ_GET_G1_PERMIT(int sha, int date,octet *S,octet *HID,octet *TPG1);
-
-/**
- * @brief Calculate time permit in G2
- *
- * Calculate time permit in G2.
- *
- * <ol>
- * <li> TPG2=s*H2(date|sha256(ID))
- * </ol>
- *
- * @param  sha       Hash type
- * @param  date      Epoch days
- * @param  S         Master secret
- * @param  HID       sha256(ID)
- * @param  TPG2      Time Permit in G2
- * @return rtn       Returns 0 if successful or else an error code
- */
-int WCC_ZZZ_GET_G2_PERMIT(int sha, int date,octet *S,octet *HID,octet *TPG2);
+int WCC_ZZZ_GET_G1_MULTIPLE(int sha,octet *S,octet *ID,octet *VG1);
 
 /**
  * @brief Calculate the sender AES key
@@ -194,19 +120,17 @@ int WCC_ZZZ_GET_G2_PERMIT(int sha, int date,octet *S,octet *HID,octet *TPG2);
  * </ol>
  *
  * @param  sha         Hash type
- * @param  date        Epoch days
  * @param  xOct        Random x < q where q is the curve order
  * @param  piaOct      Hq(PaG1,PbG2,PgG1)
  * @param  pibOct      Hq(PbG2,PaG1,PgG1)
  * @param  PbG2Oct     y.BG2 where y < q
  * @param  PgG1Oct     w.AG1 where w < q
  * @param  AKeyG1Oct   Sender key
- * @param  ATPG1Oct    Sender time permit
  * @param  IdBOct      Receiver identity
  * @param  AESKeyOct   Returned AES key
  * @return rtn         Returns 0 if successful or else an error code
  */
-int WCC_ZZZ_SENDER_KEY(int sha, int date, octet *xOct, octet *piaOct, octet *pibOct, octet *PbG2Oct, octet *PgG1Oct, octet *AKeyG1Oct, octet *ATPG1Oct, octet *IdBOct, octet *AESKeyOct);
+int WCC_ZZZ_SENDER_KEY(int sha, octet *xOct, octet *piaOct, octet *pibOct, octet *PbG2Oct, octet *PgG1Oct, octet *AKeyG1Oct, octet *IdBOct, octet *AESKeyOct);
 
 /**
  * @brief Calculate the receiver AES key
@@ -219,7 +143,6 @@ int WCC_ZZZ_SENDER_KEY(int sha, int date, octet *xOct, octet *piaOct, octet *pib
  * </ol>
  *
  * @param  sha         Hash type
- * @param  date        Epoch days
  * @param  yOct        Random y < q where q is the curve order
  * @param  wOct        Random w < q where q is the curve order
  * @param  piaOct      Hq(PaG1,PbG2,PgG1)
@@ -227,12 +150,11 @@ int WCC_ZZZ_SENDER_KEY(int sha, int date, octet *xOct, octet *piaOct, octet *pib
  * @param  PaG1Oct     x.AG1 where x < q
  * @param  PgG1Oct     w.AG1 where w < q
  * @param  BKeyG2Oct   Receiver key
- * @param  BTPG2Oct    Receiver time permit
  * @param  IdAOct      Sender identity
  * @param  AESKeyOct   AES key returned
  * @return rtn         Returns 0 if successful or else an error code
  */
-int WCC_ZZZ_RECEIVER_KEY(int sha, int date, octet *yOct, octet *wOct,  octet *piaOct, octet *pibOct,  octet *PaG1Oct, octet *PgG1Oct, octet *BKeyG2Oct,octet *BTPG2Oct,  octet *IdAOct, octet *AESKeyOct);
+int WCC_ZZZ_RECEIVER_KEY(int sha, octet *yOct, octet *wOct,  octet *piaOct, octet *pibOct,  octet *PaG1Oct, octet *PgG1Oct, octet *BKeyG2Oct, octet *IdAOct, octet *AESKeyOct);
 
 /**
  * @brief Add two members from the group G1
