--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -182,9 +182,7 @@ foreach(curve ${AMCL_CURVE})
     # WCC Tests
     ################################################
     if(BUILD_WCC)
-      amcl_curve_test(${curve} test_wcc_sha256_${TC} test_wcc_ZZZ.c.in        amcl_wcc_${TC} "SUCCESS" "sha256")
-      amcl_curve_test(${curve} test_wcc_sha384_${TC} test_wcc_ZZZ.c.in        amcl_wcc_${TC} "SUCCESS" "sha384")
-      amcl_curve_test(${curve} test_wcc_sha512_${TC} test_wcc_ZZZ.c.in        amcl_wcc_${TC} "SUCCESS" "sha512")
+      amcl_curve_test(${curve} test_wcc_${TC} test_wcc_ZZZ.c.in amcl_wcc_${TC} "SUCCESS")
       amcl_curve_test(${curve} test_wcc_random_${TC} test_wcc_random_ZZZ.c.in amcl_wcc_${TC} "SUCCESS")
       amcl_curve_test(${curve} test_wcc_invalid_points_${TC} test_wcc_invalid_points_ZZZ.c.in amcl_wcc_${TC} "SUCCESS")
       amcl_curve_test(${curve} test_wcc_bad_sender_key_${TC} test_wcc_bad_sender_key_ZZZ.c.in amcl_wcc_${TC} "SUCCESS")
