--- a/examples/testwcc_ZZZ.c.in
+++ b/examples/testwcc_ZZZ.c.in
@@ -18,10 +18,10 @@ under the License.
 */
 
 
-/* Demonstrate WCC with one TA and no time permits */
+/* Demonstrate WCC with one TA */
 
 /* Build executible after installation:
-   gcc -std=c99 -g testwcc.c -I/opt/amcl/include -L/opt/amcl/lib -lamcl_wcc -lamcl_pairing -lamcl_curve -lamcl_core -o testwcc */
+   gcc -std=c99 -g testwcc_ZZZ.c -I/opt/amcl/include -L/opt/amcl/lib -lamcl_wcc_ZZZ -lamcl_pairing_ZZZ -lamcl_curve_ZZZ -lamcl_core_ZZZ -o testwcc_ZZZ */
 
 #include <stdio.h>
 #include <stdlib.h>
@@ -48,9 +48,7 @@ int main()
     char bkeyG2[4*WCC_PFS_ZZZ];
     octet BKeyG2= {0,sizeof(bkeyG2), bkeyG2};
 
-    char hv[WCC_PFS_ZZZ],alice_id[256],bob_id[256];
-    octet HV= {0,sizeof(hv),hv};
-
+    char alice_id[256],bob_id[256];
     octet IdA= {0,sizeof(alice_id),alice_id};
     octet IdB= {0,sizeof(bob_id),bob_id};
 
@@ -97,17 +95,7 @@ int main()
     octet C= {0,sizeof(c),c};
     octet P= {0,sizeof(p),p};
 
-    int date;
-
-    int hashDoneOn = 1;
-    int hashDoneOff = 0;
-
-    date = 0;
-#ifdef DEBUG
-    printf("Date %d \n", date);
-#endif
-
-    /* unrandom seed value! */
+    /* non random seed value! */
     SEED.len=32;
     for (i=0; i<32; i++) SEED.val[i]=i+1;
 #ifdef DEBUG
@@ -136,8 +124,7 @@ int main()
     OCT_jstring(&IdA,"alice@miracl.com");
 
     // TA: Generate Alices's sender key
-    HASH_ID(HASH_TYPE_WCC_ZZZ,&IdA,&HV);
-    rtn = WCC_ZZZ_GET_G1_MULTIPLE(HASH_TYPE_WCC_ZZZ,hashDoneOn,&MS,&HV,&AKeyG1);
+    rtn = WCC_ZZZ_GET_G1_MULTIPLE(HASH_TYPE_WCC_ZZZ,&MS,&IdA,&AKeyG1);
     if (rtn != 0)
     {
         printf("TA WCC_ZZZ_GET_G1_MULTIPLE() Error %d\n", rtn);
@@ -152,8 +139,7 @@ int main()
     OCT_jstring(&IdB,"bob@miracl.com");
 
     // TA: Generate Bob's receiver key
-    HASH_ID(HASH_TYPE_WCC_ZZZ,&IdB,&HV);
-    rtn = WCC_ZZZ_GET_G2_MULTIPLE(HASH_TYPE_WCC_ZZZ,hashDoneOn,&MS,&HV,&BKeyG2);
+    rtn = WCC_ZZZ_GET_G2_MULTIPLE(HASH_TYPE_WCC_ZZZ,&MS,&IdB,&BKeyG2);
     if (rtn != 0)
     {
         printf("TA WCC_ZZZ_GET_G2_MULTIPLE() Error %d\n", rtn);
@@ -179,7 +165,7 @@ int main()
     printf("\n");
 #endif
 
-    rtn = WCC_ZZZ_GET_G1_MULTIPLE(HASH_TYPE_WCC_ZZZ,hashDoneOff,&X,&IdA,&PaG1);
+    rtn = WCC_ZZZ_GET_G1_MULTIPLE(HASH_TYPE_WCC_ZZZ,&X,&IdA,&PaG1);
     if (rtn != 0)
     {
         printf("Alice WCC_ZZZ_GET_G1_MULTIPLE() Error %d\n", rtn);
@@ -207,7 +193,7 @@ int main()
     OCT_output(&W);
     printf("\n");
 #endif
-    rtn = WCC_ZZZ_GET_G1_MULTIPLE(HASH_TYPE_WCC_ZZZ,hashDoneOff,&W,&IdA,&PgG1);
+    rtn = WCC_ZZZ_GET_G1_MULTIPLE(HASH_TYPE_WCC_ZZZ,&W,&IdA,&PgG1);
     if (rtn != 0)
     {
         printf("Bob WCC_ZZZ_GET_G1_MULTIPLE() Error %d\n", rtn);
@@ -230,7 +216,7 @@ int main()
     OCT_output(&Y);
     printf("\n");
 #endif
-    rtn = WCC_ZZZ_GET_G2_MULTIPLE(HASH_TYPE_WCC_ZZZ,hashDoneOff,&Y,&IdB,&PbG2);
+    rtn = WCC_ZZZ_GET_G2_MULTIPLE(HASH_TYPE_WCC_ZZZ,&Y,&IdB,&PbG2);
     if (rtn != 0)
     {
         printf("Bob WCC_ZZZ_GET_G1_MULTIPLE() Error %d\n", rtn);
@@ -258,7 +244,7 @@ int main()
 #endif
 
     // Bob calculates AES Key
-    WCC_ZZZ_RECEIVER_KEY(HASH_TYPE_WCC_ZZZ,date, &Y, &W,  &PIA, &PIB,  &PaG1, &PgG1, &BKeyG2, NULL, &IdA, &K2);
+    WCC_ZZZ_RECEIVER_KEY(HASH_TYPE_WCC_ZZZ,&Y,&W,&PIA,&PIB,&PaG1,&PgG1,&BKeyG2,&IdA,&K2);
     if (rtn != 0)
     {
         printf("Bob WCC_ZZZ_RECEIVER_KEY() Error %d\n", rtn);
@@ -296,7 +282,7 @@ int main()
 #endif
 
     // Alice calculates AES Key
-    rtn = WCC_ZZZ_SENDER_KEY(HASH_TYPE_WCC_ZZZ,date, &X, &PIA, &PIB, &PbG2, &PgG1, &AKeyG1, NULL, &IdB, &K1);
+    rtn = WCC_ZZZ_SENDER_KEY(HASH_TYPE_WCC_ZZZ,&X,&PIA,&PIB,&PbG2,&PgG1,&AKeyG1,&IdB,&K1);
     if (rtn != 0)
     {
         printf("Alice WCC_ZZZ_SENDER_KEY() Error %d\n", rtn);
@@ -317,7 +303,7 @@ int main()
     OCT_output_string(&MESSAGE1);
     printf("\n");
 
-    AES_GCM_ENCRYPT(&K1, &IV, &IdA, &MESSAGE1, &C, &T1);
+    AES_GCM_ENCRYPT(&K1,&IV,&IdA,&MESSAGE1,&C,&T1);
 
     printf("Alice: Ciphertext: ");
     OCT_output(&C);
@@ -326,7 +312,7 @@ int main()
     OCT_output(&T1);
     printf("\n");
 
-    AES_GCM_DECRYPT(&K2, &IV, &IdA, &C, &P, &T2);
+    AES_GCM_DECRYPT(&K2,&IV,&IdA,&C,&P,&T2);
 
     printf("Bob: Decrypted message received from Alice: ");
     OCT_output_string(&P);
@@ -352,7 +338,6 @@ int main()
     OCT_clear(&MS);
     OCT_clear(&AKeyG1);
     OCT_clear(&BKeyG2);
-    OCT_clear(&HV);
     OCT_clear(&IdA);
     OCT_clear(&IdB);
     OCT_clear(&X);
